fix projects and talks on mobile

--- a/public/css/listPage.css
+++ b/public/css/listPage.css
@@ -227,7 +227,34 @@ span.count-notes:before {
   border-color: var(--blue-4);
 }
 
-ul.no-marker li:before {
+ul.no-marker li:not(:last-of-type) {
+  position: relative;
+}
+
+ul.no-marker li:not(:last-of-type)::before,
+ul.no-marker li:not(:last-of-type)::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  border-bottom: 2px solid;
+  top: calc(100% + 1rem);
+  left: 0;
+  overflow: hidden;
+}
+
+ul.no-marker li:not(:last-of-type)::before {
+  border-color: #f16f6f;
+  animation: list-glitch1 3.5s infinite;
+}
+
+ul.no-marker li:not(:last-of-type)::after {
+  border-color: #67f3da;
+  animation: list-glitch2 2.5s infinite;
+  animation-delay: 0.5s;
+}
+
+/* ul.no-marker li:before {
   display: none;
 }
 
@@ -244,7 +271,7 @@ ul.no-marker li:not(:last-of-type):after {
   background-color: var(--blue-4);
   top: calc(100% + 1rem);
   left: 0;
-}
+} */
 
 /* Toggles from: https://tiny-octopus.com/posts/build-an-accessible-toggle-switch-with-modern-html-and-css-without-javascript/ */
 
@@ -536,11 +563,22 @@ li.new {
   .talk:has(.title) {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
+    padding-inline: 0;
   }
 
   .project .summary {
     grid-column: 1;
     grid-row: 3;
+  }
+
+  .talk .title {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .talk > .links {
+    grid-column: 1;
+    grid-row: 2;
   }
 
   .links {
